crates/hwp-core/tests/snapshots/snapshot_tests__pagedefs_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
Section 1: A4 portrait

Section 2: A4 landscape
