crates/hwp-core/tests/snapshots/snapshot_tests__sample_5017_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title>제목입니다.</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.cs5 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";font-weight:bold;
}
.cs6 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:0.25em;
}
.cs7 {
  font-size:20pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs8 {
  font-size:20pt;color:rgb(0,0,0);font-family:"바탕";font-weight:bold;
}
.cs9 {
  font-size:20pt;color:rgb(0,0,0);font-family:"바탕";font-style:italic;
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
.ps12 {
  text-align:justify;
}
.ps13 {
  text-align:justify;
}
.ps14 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:7.06mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:7.06mm;width:150.00mm;"><span class="hrt cs7">한글 2005 예제 파일입니다.</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps11" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:16.93mm;height:3.18mm;width:150.00mm;"><span class="hrt cs2">머리말입니다</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:21.52mm;height:3.53mm;width:150.00mm;"></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:27.35mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">본문&nbsp;</span><span class="hrt cs5">내용</span><span class="hrt cs1">입니다. 본 문서는 글 워드 프로세서의 파일 저장 형식 중, 글 2002 이후&nbsp;</span></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:32.99mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">제품에서 사용되는 글 문서 파일 형식 5.0 및 글 97 문서 파일 형식, HWPML에 관</span></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:38.64mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">하여 설명한다.</span></div><div class="hls ps13" style="line-height:16.69mm;white-space:nowrap;left:5.29mm;top:54.39mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">표</span></div><div class="hls ps13" style="line-height:16.69mm;white-space:nowrap;left:5.29mm;top:53.45mm;height:16.69mm;width:144.71mm;"><div class="htG" style="left:0mm;width:144.71mm;top:0mm;height:28.86mm;display:inline-block;position:relative;vertical-align:middle;"><div class="htb" style="left:1mm;width:142.71mm;top:1mm;height:14.7mm;"><svg class="hs" viewBox="-2.5 -2.5 147.71 19.7" style="left:-2.5mm;top:-2.5mm;width:147.71mm;height:19.7mm;"><defs><pattern id="w_00" width="10" height="10" patternUnits="userSpaceOnUse"><rect width="10" height="10" fill="rgb(153,204,255)" /></pattern></defs><path fill="url(#w_00)" d="M71.36,0.99L142.71,0.99L142.71,1.99L71.36,1.99L71.36,0.99Z "></path><path d="M0,0 L0,14.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M71.36,0 L71.36,14.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M142.71,0 L142.71,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M142.71,4.53 L142.71,14.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,0 L142.77,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L71.42,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M71.16,4.53 L142.91,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,14.7 L71.42,14.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M71.16,14.7 L142.91,14.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">A0</span></div></div></div></div><div class="hce" style="left:71.36mm;top:0mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">B0</span></div></div></div></div><div class="hce" style="left:0mm;top:4.53mm;width:71.36mm;height:10.17mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:6.64mm;"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">A1</span></div></div></div></div><div class="hce" style="left:71.36mm;top:4.53mm;width:71.36mm;height:10.17mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">B10</span></div><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">B11</span></div></div></div></div></div><div class="hcD" style="left:1mm;top:18.7mm;width:142.71mm;height:9.17mm;overflow:hidden;"><div class="hcI" ><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:9.17mm;width:70.36mm;"><span class="hrt cs1">&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:9.17mm;"><span class="hrt cs1"></span></div><span class="hrt cs1">&nbsp;</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:9.17mm;width:70.36mm;"><span class="hrt cs1">B0</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:9.17mm;width:70.36mm;"><span class="hrt cs1">A1</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:9.17mm;width:70.36mm;"><span class="hrt cs1">B10</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:5.46mm;height:9.17mm;width:70.36mm;"><span class="hrt cs1">B11</span></div></div></div></div></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:72.26mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">표</span><span class="hrt cs5">끝</span></div><div class="hls ps13" style="line-height:16.50mm;white-space:nowrap;left:5.29mm;top:77.90mm;height:16.50mm;width:144.71mm;"><div class="htG" style="left:0mm;width:145.01mm;top:0mm;height:23.03mm;display:inline-block;position:relative;vertical-align:middle;"><div class="htb" style="left:1mm;width:143.01mm;top:1mm;height:14.51mm;"><svg class="hs" viewBox="-2.5 -2.5 148.01 19.51" style="left:-2.5mm;top:-2.5mm;width:148.01mm;height:19.51mm;"><defs></defs><path d="M0,0 L0,14.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M143.01,0 L143.01,14.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L143.07,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,14.51 L143.07,14.51" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:143.01mm;height:14.51mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.49mm;"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:13.50mm;"><span class="hrt cs1">table2</span></div></div></div></div></div><div class="hcD" style="left:1mm;top:18.51mm;width:143.01mm;height:3.53mm;overflow:hidden;"><div class="hcI" ><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:3.53mm;width:13.5mm;"><span class="hrt cs1">&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:3.53mm;"><span class="hrt cs1"></span></div><span class="hrt cs1">&nbsp;</span></div></div></div></div></div><div class="hls ps13" style="line-height:2.79mm;white-space:nowrap;left:5.29mm;top:99.87mm;height:3.53mm;width:0.00mm;"></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:127.26mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">다음 문단</span></div><div class="hls ps13" style="line-height:2.79mm;white-space:nowrap;left:5.29mm;top:136.26mm;height:3.53mm;width:144.71mm;"></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:145.61mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">본&nbsp;</span><span class="hrt cs6">문서</span><span class="hrt cs1">는 먼저 글 문서 파일 형식 5.0에 관하여 설명한 후, 글 97 문서 파</span></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:151.25mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">일 형식, HWPML에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내의 주요</span></div><div class="hls ps13" style="line-height:3.53mm;white-space:nowrap;left:5.29mm;top:156.90mm;height:3.53mm;width:144.71mm;"><span class="hrt cs1">한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:202.23mm;height:3.53mm;width:150.00mm;"></div><div class="hsR" style="top:35mm;left:30mm;width:57.68mm;height:34.61mm;background-repeat:no-repeat;background-image:url('images/sample-5017/BIN0001.jpg');"></div><div class="hls ps12" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:208.05mm;height:3.18mm;width:150.00mm;"><span class="hrt cs3">미주입니다.</span></div><div class="hls ps14" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:212.19mm;height:3.18mm;width:150.00mm;padding-left:3.53mm;"><span class="hrt cs3">이건 각주이지요.</span></div></div></div><div class="htG" style="left:35.29mm;width:147.71mm;top:135.05mm;height:26.21mm;"><div class="htb" style="left:3mm;width:142.71mm;top:4mm;height:9.06mm;"><svg class="hs" viewBox="-2.5 -2.5 147.71 14.06" style="left:-2.5mm;top:-2.5mm;width:147.71mm;height:14.06mm;"><defs></defs><path d="M0,0 L0,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M71.36,0 L71.36,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M142.71,0 L142.71,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L142.77,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,4.53 L142.77,4.53" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,9.06 L142.77,9.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.36mm;"><span class="hrt cs1">A0</span></div></div></div></div><div class="hce" style="left:71.36mm;top:0mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:70.36mm;"></div></div></div></div><div class="hce" style="left:0mm;top:4.53mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:70.36mm;"></div></div></div></div><div class="hce" style="left:71.36mm;top:4.53mm;width:71.36mm;height:4.53mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:70.36mm;"></div></div></div></div></div><div class="hcD" style="left:3mm;top:16.06mm;width:142.71mm;height:9.17mm;overflow:hidden;"><div class="hcI" ><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:9.17mm;width:142.71mm;"><span class="hrt cs1">표&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:9.17mm;"><span class="hrt cs1">1</span></div><span class="hrt cs1">&nbsp;2x2짜리표</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:5.46mm;height:9.17mm;width:142.71mm;"><span class="hrt cs1">가나다</span></div></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:150.00mm;"><span class="hrt cs1">다음 페이지</span></div></div></div></div></body>

</html>
