crates/hwp-core/tests/snapshots/snapshot_tests__sample_5017_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



한글 **2005** *예제* 파일입니다.

머리말입니다

본문 **내용**입니다. 본 문서는 글 워드 프로세서의 파일 저장 형식 중, 글 2002 이후 제품에서 사용되는 글 문서 파일 형식 5.0 및 글 97 문서 파일 형식, HWPML에 관하여 설명한다.

표


| A0<br> | B0<br> |
|---|---|
| A1<br> | B10<br> B11<br> |
  
표끝


| table2<br> |
|---|



| A0<br> |   |
|---|---|
|   |   |


다음 문단

본 문서는 먼저 글 문서 파일 형식 5.0에 관하여 설명한 후, 글 97 문서 파일 형식, HWPML에 관하여 설명한다. 각 형식에 대한 설명은 문서 파일 형식 내의 주요한 자료 형식 및 파일 구조, 레코드 구조에 대해서 설명한다.

![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017/BIN0001.jpg)

미주입니다.

이건 각주이지요.

---


다음 페이지  
![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017/BIN0002.png)
