crates/hwp-core/tests/snapshots/snapshot_tests__sample_5017_pics_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs1 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.cs2 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs4 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:26.67mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:26.67mm;width:150.00mm;"><span class="hrt cs4">글자취급</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">어울림 (양쪽 본문)</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:0.00mm;height:3.53mm;width:27.08mm;"></div><div class="hsR" style="top:35mm;left:30mm;width:55.84mm;height:33.5mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:5.64mm;height:3.53mm;width:27.08mm;"><span class="hrt cs4">울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:11.29mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:11.29mm;height:3.53mm;width:27.08mm;"><span class="hrt cs4">림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:16.93mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림&nbsp;</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:16.93mm;height:3.53mm;width:27.08mm;"><span class="hrt cs4">어울림 어울림&nbsp;</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:22.58mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:22.58mm;height:3.53mm;width:27.08mm;"><span class="hrt cs4">울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:28.22mm;height:3.53mm;width:67.08mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:122.92mm;top:28.22mm;height:3.53mm;width:27.08mm;"><span class="hrt cs4">림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:33.87mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:39.51mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 (왼쪽 본문)</span></div><div class="hsR" style="top:35mm;left:30mm;width:55.84mm;height:33.5mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:11.29mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:16.93mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림&nbsp;</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:22.58mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:28.22mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:33.87mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:39.51mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:0.00mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 (오른쪽 본문)</span></div><div class="hsR" style="top:35mm;left:30mm;width:55.84mm;height:33.5mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:5.64mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:11.29mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:16.93mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림&nbsp;</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:22.58mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">어울림 어울림 어울림 어울림 어울림 어울림 어울</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:65.84mm;top:28.22mm;height:3.53mm;width:84.16mm;"><span class="hrt cs4">림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:33.87mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어</span></div><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:39.51mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:34.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">자리차지 (왼쪽정렬)</span></div><div class="hsR" style="top:35mm;left:30mm;width:56.93mm;height:34.16mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:34.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">자리차지 (오른쪽정렬)</span></div><div class="hsR" style="top:35mm;left:30mm;width:56.93mm;height:34.16mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:34.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">자리차지 (가운데정렬)</span></div><div class="hsR" style="top:35mm;left:30mm;width:56.93mm;height:34.16mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:34.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">자리차지 (안쪽정렬)</span></div><div class="hsR" style="top:35mm;left:30mm;width:56.93mm;height:34.16mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0001.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:34.16mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">자리차지 (바깥쪽정렬)</span></div><div class="hsR" style="top:35mm;left:30mm;width:56.93mm;height:34.16mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0001.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">글뒤로</span></div><div class="hsR" style="top:35mm;left:30mm;width:58.68mm;height:35.21mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps0" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs4">글 앞으로</span></div><div class="hsR" style="top:35mm;left:30mm;width:48.17mm;height:28.9mm;background-repeat:no-repeat;background-image:url('images/sample-5017-pics/BIN0002.jpg');"></div></div></div></div></body>

</html>
