crates/hwp-core/tests/snapshots/snapshot_tests__sample_5017_pics_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
글자취급

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
어울림 (양쪽 본문)

어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
어울림 (왼쪽 본문)

어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
어울림 (오른쪽 본문)

어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림 어울림

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
자리차지 (왼쪽정렬)

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
자리차지 (오른쪽정렬)

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
자리차지 (가운데정렬)

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0001.jpg)  
자리차지 (안쪽정렬)

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0001.jpg)  
자리차지 (바깥쪽정렬)

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
글뒤로

---


![이미지]({{SNAPSHOTS_DIR}}/images/sample-5017-pics/BIN0002.jpg)  
글 앞으로
